@@ -14,8 +14,12 @@ Genrose <- function(x, a = 1, b = 100) { 	## One generalization of the Rosenbroc
 
 maxIt <- 25         		# not excessive but so that we get some run-time on simple problems
 
+haveDEoptim <- requireNamespace("DEoptim", quietly=TRUE)
+
 suppressMessages({
-    library(DEoptim) 		# the original, currently 2.0.7
+    if (haveDEoptim) {
+        library(DEoptim) 	# the original, currently 2.0.7
+    }
     library(RcppDE) 		# the contender
 })
 
@@ -26,11 +30,13 @@ cppDE <- function(n, maxIt, fun, ...) RcppDE::DEoptim(fn=fun, lower=rep(-25, n),
                                                       control=list(NP=10*n, itermax=maxIt, trace=FALSE),
                                                       ...)#, bs=TRUE))
 
-set.seed(42)
-valBasic <- basicDE(5, maxIt, function(...) Rastrigin(...))
-set.seed(42)
-valCpp <- cppDE(5, maxIt, function(...) Rastrigin(...))
-#stopifnot( all.equal(valBasic, valCpp) )
+if (haveDEoptim) {
+    set.seed(42)
+    valBasic <- basicDE(5, maxIt, function(...) Rastrigin(...))
+    set.seed(42)
+    valCpp <- cppDE(5, maxIt, function(...) Rastrigin(...))
+    ##stopifnot( all.equal(valBasic, valCpp) )
+}
 
 runPair <- function(n, maxIt, fun, funname, ...) {
     gc()
@@ -48,34 +54,37 @@ runPair <- function(n, maxIt, fun, funname, ...) {
     set.seed(42)
     rt <- system.time(invisible(rres <- cppDE(n, maxIt, fun, ...)))[3]
 
-    #stopifnot(all.equal(ores, rres))
+    ##stopifnot(all.equal(ores, rres))
 
     return(data.frame(DEoptim=bt, RcppDEc=ct, RcppDEr=rt))
 }
 
-cat("# At", format(Sys.time()), "\n")
+if (haveDEoptim) {
 
-reps <- c(5, 10, 20, 50)
+    cat("# At", format(Sys.time()), "\n")
 
-res <- rbind(do.call(rbind, lapply(reps, runPair, maxIt, function(...) Rastrigin(...), "rastrigin")),
-             do.call(rbind, lapply(reps, runPair, maxIt, function(...) Wild(...), "wild")),
-             do.call(rbind, lapply(reps, runPair, maxIt, function(...) Genrose(...), "genrose", a = 1, b = 100))
-             )
-res <- rbind(res, colMeans(res))
+    reps <- c(5, 10, 20, 50)
 
-rownames(res) <- c(paste("Rastrigin", reps, sep=""),
-                   paste("Wild", reps, sep=""),
-                   paste("Genrose", reps, sep=""),
-                   "MEANS")
+    res <- rbind(do.call(rbind, lapply(reps, runPair, maxIt, function(...) Rastrigin(...), "rastrigin")),
+                 do.call(rbind, lapply(reps, runPair, maxIt, function(...) Wild(...), "wild")),
+                 do.call(rbind, lapply(reps, runPair, maxIt, function(...) Genrose(...), "genrose", a = 1, b = 100))
+                 )
+    res <- rbind(res, colMeans(res))
 
-res$ratioRcppCompToBasic <- res[,2]/res[,1]
-res$pctGainOfRcppComp <- (1-res[,2]/res[,1])*100
-#res$netSpeedUpC <- res[,1]/res[,2]
+    rownames(res) <- c(paste("Rastrigin", reps, sep=""),
+                       paste("Wild", reps, sep=""),
+                       paste("Genrose", reps, sep=""),
+                       "MEANS")
 
-res$ratioRcppRToBasic <- res[,3]/res[,1]
-res$pctGainOfRcppR <- round((1-res[,3]/res[,1])*100, digits=3)
-#res$netSpeedUpR <- res[,1]/res[,3]
+    res$ratioRcppCompToBasic <- res[,2]/res[,1]
+    res$pctGainOfRcppComp <- (1-res[,2]/res[,1])*100
+    ##res$netSpeedUpC <- res[,1]/res[,2]
+
+    res$ratioRcppRToBasic <- res[,3]/res[,1]
+    res$pctGainOfRcppR <- round((1-res[,3]/res[,1])*100, digits=3)
+    ##res$netSpeedUpR <- res[,1]/res[,3]
 
 
-print(res)
-cat("# Done", format(Sys.time()), "\n")
+    print(res)
+    cat("# Done", format(Sys.time()), "\n")
+}
